removed -XX:MaxPermSize